# pypedal

./: deploy.sh  pyproject.toml
blog_fodder/: doing.md
faust/: faustSawtooth.dsp
faust/faustEcho/: faustEcho.dsp
faust/faustEcho/faustEcho/: faustEcho.cpp  faustEcho.h  faustEcho.ino
faust/faustSawtooth/: FaustSawtooth.cpp  FaustSawtooth.h  faustSawtooth.ino
faust/faustTutorialEffect/: FaustZita.cpp  FaustZita.dsp  FaustZita.h  faustTutorialEffect.ino
micropython/: TEENSY41-20220618-v1.19.1.hex  manifest.py
